--- a/app/src/main/res/values-es/text.xml
+++ b/app/src/main/res/values-es/text.xml
@@ -2,12 +2,15 @@
 <resources>
     <string name="username">Usuario</string>
     <string name="password">Contraseña</string>
-    <string name="login">Acceso</string>
+    <string name="login">Acceder</string>
     <string name="singup">Registro</string>
     <string name="or">O</string>
     <string name="guest_session">Sesión de invitado</string>
     <string name="confirm_password">Confirmar contraseña</string>
+    <string name="email">Email</string>
     <string name="create_account">Crear cuenta</string>
     <string name="shake_it">¡Agítalo!</string>
     <string name="bad_login">Usuario o contraseña incorrecta</string>
+    <string name="no_conex">Necesitas estar conectado a Internet</string>
+    <string name="empty_login">¡Usuario o Contraseña vacío!</string>
 </resources>
