--- a/app/src/main/res/values/text.xml
+++ b/app/src/main/res/values/text.xml
@@ -1,4 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="shake_it">Shake it!</string>
+    <string name="username">Usuario</string>
+    <string name="password">Contraseña</string>
+    <string name="login">Acceder</string>
+    <string name="singup">Registro</string>
+    <string name="or">O</string>
+    <string name="guest_session">Sesión de invitado</string>
+    <string name="confirm_password">Confirmar contraseña</string>
+    <string name="email">Email</string>
+    <string name="create_account">Crear cuenta</string>
+    <string name="bad_login">Usuario o contraseña incorrecta</string>
 </resources>
