--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,10 +2,10 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:background="@drawable/fondo_login"
+    android:background="#000"
     android:layout_height="match_parent">
     <RelativeLayout
-        android:layout_marginTop="@dimen/general"
+        android:layout_marginTop="@dimen/margin_general"
         android:layout_width="match_parent"
         android:layout_height="100dp">
 
