--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -4,76 +4,113 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
+    android:padding="@dimen/margin_general"
+
     android:layout_height="match_parent">
 
     <EditText
+        android:text=""
         android:id="@+id/etLoginUsername"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="0dp"
         android:layout_marginRight="8dp"
         android:ems="10"
+        android:textAlignment="center"
         android:hint="@string/username"
         android:inputType="textPersonName"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="@dimen/normal" />
+        android:layout_marginTop="@dimen/margin_normal"
+        android:layout_marginEnd="8dp" />
 
     <EditText
+        android:text=""
+        android:textAlignment="center"
         android:id="@+id/etLoginPassword"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="@string/password"
         android:inputType="textPassword"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/etLoginUsername"
-        android:layout_marginLeft="0dp"
         app:layout_constraintLeft_toLeftOf="@+id/etLoginUsername"
-        android:layout_marginRight="0dp"
         app:layout_constraintRight_toRightOf="@+id/etLoginUsername" />
 
     <Button
+        android:textColor="@color/textColorPrimary"
         android:id="@+id/btLogin"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="5dp"
         android:text="@string/login"
-        android:onClick="btGuestSessionOnClick"
+        android:background="@drawable/rounded_corner"
+        android:onClick="btLoginOnClick"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etLoginPassword"
-        app:layout_constraintHorizontal_bias="0.504" />
+        app:layout_constraintHorizontal_bias="0.504"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp" />
 
     <TextView
         android:id="@+id/tvOr"
+        android:padding="@dimen/margin_general"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="0dp"
         android:text="@string/or"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btLogin"
-        app:layout_constraintHorizontal_bias="0.501" />
+        app:layout_constraintHorizontal_bias="0.501"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp" />
 
     <Button
+        android:textColor="@color/textColorPrimary"
         android:onClick="btGuestSessionOnClick"
         android:id="@+id/btGuestSession"
-        android:layout_width="wrap_content"
+        android:background="@drawable/rounded_corner"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="0dp"
         android:text="@string/guest_session"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvOr" />
+        app:layout_constraintTop_toBottomOf="@+id/tvOr"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/ic_person"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/etLoginUsername"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/etLoginUsername"
+        android:layout_marginBottom="8dp" />
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/ic_password"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/etLoginPassword"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/etLoginPassword"
+        android:layout_marginBottom="8dp" />
 
 
 </android.support.constraint.ConstraintLayout>
