--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="general">16dp</dimen>
-    <dimen name="normal">32dp</dimen>
+    <!-- MARGIN PADDING -->
+    <dimen name="margin_general">16dp</dimen>
+    <dimen name="margin_normal">32dp</dimen>
+
+    <!-- ELEVATION -->
+    <dimen name="elevation_general">8dp</dimen>
 </resources>
