--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,7 +2,8 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:background="#000"
+    android:background="#272b3d"
+
     android:layout_height="match_parent">
     <RelativeLayout
         android:layout_marginTop="@dimen/margin_general"
@@ -12,15 +13,15 @@
         <ImageView
             android:layout_centerInParent="true"
             android:id="@+id/imageView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:srcCompat="@mipmap/ic_launcher_round" />
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            app:srcCompat="@mipmap/ic_launcher" />
     </RelativeLayout>
 
     <android.support.design.widget.AppBarLayout
         
         android:layout_width="match_parent"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="90dp"
         android:layout_height="wrap_content"
         android:background="#00ffffff"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
