--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -10,6 +10,7 @@
 
     <EditText
         android:text=""
+        style="@style/shadowText"
         android:id="@+id/etLoginUsername"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -26,6 +27,7 @@
         android:layout_marginEnd="8dp" />
 
     <EditText
+        style="@style/shadowText"
         android:text=""
         android:textAlignment="center"
         android:id="@+id/etLoginPassword"
@@ -40,6 +42,7 @@
         app:layout_constraintRight_toRightOf="@+id/etLoginUsername" />
 
     <Button
+        style="@style/shadowText"
         android:textColor="@color/textColorPrimary"
         android:id="@+id/btLogin"
         android:layout_width="0dp"
@@ -48,7 +51,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginTop="5dp"
         android:text="@string/login"
-        android:background="@drawable/rounded_corner"
+        android:background="@drawable/border"
         android:onClick="btLoginOnClick"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -58,6 +61,7 @@
         android:layout_marginEnd="8dp" />
 
     <TextView
+        style="@style/shadowText"
         android:id="@+id/tvOr"
         android:padding="@dimen/margin_general"
         android:layout_width="wrap_content"
@@ -73,10 +77,11 @@
         android:layout_marginEnd="8dp" />
 
     <Button
+        style="@style/shadowText"
         android:textColor="@color/textColorPrimary"
         android:onClick="btGuestSessionOnClick"
         android:id="@+id/btGuestSession"
-        android:background="@drawable/rounded_corner"
+        android:background="@drawable/border"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
@@ -89,6 +94,10 @@
         android:layout_marginEnd="8dp" />
 
     <ImageView
+        android:textColorHint="@color/textHint"
+        android:shadowDx="1"
+        android:shadowDy="1"
+        android:shadowRadius="1"
         android:id="@+id/imageView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -101,6 +110,10 @@
         android:layout_marginBottom="8dp" />
 
     <ImageView
+        android:textColorHint="@color/textHint"
+        android:shadowDx="1"
+        android:shadowDy="1"
+        android:shadowRadius="1"
         android:id="@+id/imageView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
