--- a/app/src/main/res/layout/fragment_singup.xml
+++ b/app/src/main/res/layout/fragment_singup.xml
@@ -55,36 +55,22 @@
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginRight="8dp" />
 
-    <EditText
-        android:textAlignment="center"
-        android:id="@+id/etRegConfirmPassword"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="@string/confirm_password"
-        android:inputType="textPassword"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/etRegPassword"
-        android:layout_marginRight="8dp" />
-
     <Button
         android:textColor="@color/textColorPrimary"
         android:id="@+id/btLogin"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="7dp"
         android:text="@string/singup"
-        android:background="@drawable/rounded_corner"
+        android:background="@drawable/border"
         android:onClick="btGuestSessionOnClick"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etRegConfirmPassword"
         android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp" />
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/etRegPassword"
+        app:layout_constraintHorizontal_bias="0.6" />
 
     <ImageView
         android:id="@+id/imageView2"
@@ -95,19 +81,9 @@
         app:layout_constraintTop_toTopOf="@+id/etRegUsername"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
-        app:layout_constraintVertical_bias="0.545"
-        app:layout_constraintBottom_toBottomOf="@+id/etRegUsername" />
-
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/ic_password"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toBottomOf="@+id/etRegPassword"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/etRegEmail" />
+        app:layout_constraintVertical_bias="0.666"
+        app:layout_constraintBottom_toBottomOf="@+id/etRegUsername"
+        android:layout_marginLeft="24dp" />
 
     <ImageView
         android:id="@+id/imageView6"
@@ -118,18 +94,8 @@
         app:layout_constraintBottom_toBottomOf="@+id/etRegPassword"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etRegEmail"
-        app:srcCompat="@drawable/ic_password" />
-
-    <ImageView
-        android:id="@+id/imageView7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginTop="0dp"
-        app:layout_constraintBottom_toBottomOf="@+id/etRegConfirmPassword"
-        app:layout_constraintLeft_toLeftOf="parent"
         app:srcCompat="@drawable/ic_password"
-        app:layout_constraintTop_toTopOf="@+id/etRegConfirmPassword" />
+        android:layout_marginLeft="24dp" />
 
     <ImageView
         android:id="@+id/imageView8"
@@ -140,8 +106,9 @@
         android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="@+id/etRegEmail"
         android:layout_marginBottom="8dp"
-        android:layout_marginLeft="0dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        android:layout_marginLeft="24dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintVertical_bias="0.333" />
 
 
 </android.support.constraint.ConstraintLayout>
