--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -40,25 +40,33 @@
         app:layout_constraintTop_toBottomOf="@+id/etLoginUsername"
         app:layout_constraintLeft_toLeftOf="@+id/etLoginUsername"
         app:layout_constraintRight_toRightOf="@+id/etLoginUsername" />
-
-    <Button
-        style="@style/shadowText"
-        android:textColor="@color/textColorPrimary"
-        android:id="@+id/btLogin"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="5dp"
-        android:text="@string/login"
-        android:background="@drawable/border"
-        android:onClick="btLoginOnClick"
+    <com.balysv.materialripple.MaterialRippleLayout
+        app:mrl_rippleColor="@color/colorPrimary"
+        android:id="@+id/ripple1"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etLoginPassword"
         app:layout_constraintHorizontal_bias="0.504"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp" />
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/etLoginPassword">
+
+        <Button
+            android:id="@+id/btLogin"
+            style="@style/shadowText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/border"
+            android:onClick="btLoginOnClick"
+
+            android:text="@string/login"
+            android:textColor="@color/textColorPrimary" />
+    </com.balysv.materialripple.MaterialRippleLayout>
+
 
     <TextView
         style="@style/shadowText"
@@ -71,27 +79,12 @@
         android:text="@string/or"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btLogin"
+        app:layout_constraintTop_toBottomOf="@+id/ripple1"
         app:layout_constraintHorizontal_bias="0.501"
         android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp" />
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="8dp" />
 
-    <Button
-        style="@style/shadowText"
-        android:textColor="@color/textColorPrimary"
-        android:onClick="btGuestSessionOnClick"
-        android:id="@+id/btGuestSession"
-        android:background="@drawable/border"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:text="@string/guest_session"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvOr"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp" />
 
     <ImageView
         android:textColorHint="@color/textHint"
@@ -107,7 +100,8 @@
         app:layout_constraintTop_toTopOf="@+id/etLoginUsername"
         android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="@+id/etLoginUsername"
-        android:layout_marginBottom="8dp" />
+        android:layout_marginBottom="8dp"
+        android:layout_marginStart="8dp" />
 
     <ImageView
         android:textColorHint="@color/textHint"
@@ -123,7 +117,39 @@
         app:layout_constraintTop_toTopOf="@+id/etLoginPassword"
         android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="@+id/etLoginPassword"
-        android:layout_marginBottom="8dp" />
+        android:layout_marginBottom="8dp"
+        android:layout_marginStart="8dp" />
+
+    <com.balysv.materialripple.MaterialRippleLayout
+        android:id="@+id/ripple2"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="11dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvOr"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp">
+
+        <Button
+            android:id="@+id/btGuestSession"
+            style="@style/shadowText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp"
+            android:background="@drawable/border"
+            android:onClick="btGuestSessionOnClick"
+            android:text="@string/guest_session"
+            android:textColor="@color/textColorPrimary"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tvOr" />
+    </com.balysv.materialripple.MaterialRippleLayout>
 
 
 </android.support.constraint.ConstraintLayout>
