--- a/app/src/main/res/layout/fragment_singup.xml
+++ b/app/src/main/res/layout/fragment_singup.xml
@@ -41,7 +41,6 @@
         app:layout_constraintTop_toBottomOf="@+id/etRegUsername" />
 
     <EditText
-        android:layout_marginLeft="0dp"
         android:textAlignment="center"
         android:id="@+id/etRegPassword"
         android:layout_width="0dp"
@@ -53,24 +52,32 @@
         app:layout_constraintTop_toBottomOf="@+id/etRegEmail"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginRight="8dp" />
+        android:layout_marginRight="8dp"
+        android:layout_marginEnd="8dp" />
 
-    <Button
-        android:textColor="@color/textColorPrimary"
-        android:id="@+id/btLogin"
+    <com.balysv.materialripple.MaterialRippleLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:text="@string/singup"
-        android:background="@drawable/border"
-        android:onClick="btGuestSessionOnClick"
+        android:layout_marginTop="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/etRegPassword"
-        app:layout_constraintHorizontal_bias="0.6" />
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp">
+
+        <Button
+            android:id="@+id/btLogin"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/border"
+            android:onClick="btGuestSessionOnClick"
+            android:text="@string/singup"
+            android:textColor="@color/textColorPrimary"
+            />
+    </com.balysv.materialripple.MaterialRippleLayout>
+
 
     <ImageView
         android:id="@+id/imageView2"
@@ -83,7 +90,8 @@
         android:layout_marginBottom="8dp"
         app:layout_constraintVertical_bias="0.666"
         app:layout_constraintBottom_toBottomOf="@+id/etRegUsername"
-        android:layout_marginLeft="24dp" />
+        android:layout_marginLeft="24dp"
+        android:layout_marginStart="24dp" />
 
     <ImageView
         android:id="@+id/imageView6"
@@ -95,7 +103,8 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etRegEmail"
         app:srcCompat="@drawable/ic_password"
-        android:layout_marginLeft="24dp" />
+        android:layout_marginLeft="24dp"
+        android:layout_marginStart="24dp" />
 
     <ImageView
         android:id="@+id/imageView8"
@@ -108,7 +117,8 @@
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="24dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintVertical_bias="0.333" />
+        app:layout_constraintVertical_bias="0.333"
+        android:layout_marginStart="24dp" />
 
 
 </android.support.constraint.ConstraintLayout>
