--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -3,6 +3,7 @@
     <!-- MARGIN PADDING -->
     <dimen name="margin_general">16dp</dimen>
     <dimen name="margin_normal">32dp</dimen>
+    <dimen name="margin_grande">64dp</dimen>
 
     <!-- ELEVATION -->
     <dimen name="elevation_general">8dp</dimen>
