--- a/app/src/main/res/layout/activity_score.xml
+++ b/app/src/main/res/layout/activity_score.xml
@@ -4,10 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/backgroundColorSecondary"
     tools:context="project.proyectointegradoraquelgutierrez.ScoreActivity">
 
     <com.github.mikephil.charting.charts.LineChart
         android:id="@+id/chart"
+        android:elevation="@dimen/elevation_general"
+        android:background="@color/backgroundColorPrimary"
         android:layout_width="0dp"
         android:layout_height="200dp"
         app:layout_constraintHorizontal_bias="0.52"
@@ -16,13 +19,14 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
-        android:id="@+id/button"
+        android:background="@drawable/circle_solid"
+        android:id="@+id/bt_play"
+        android:onClick="btPlayOnClick"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/margin_normal"
         android:layout_marginRight="@dimen/margin_normal"
         android:layout_marginTop="@dimen/margin_general"
-        android:background="@drawable/border"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/chart"
         app:srcCompat="@drawable/ic_play_arrow"
@@ -30,27 +34,36 @@
         app:layout_constraintHorizontal_bias="0.78" />
 
     <ImageButton
-        android:id="@+id/button2"
+        android:background="@drawable/circle_solid"
+        android:id="@+id/bt_history"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/margin_normal"
         android:layout_marginStart="@dimen/margin_normal"
         android:layout_marginTop="@dimen/margin_general"
-        android:background="@drawable/border"
+        android:onClick="btHistoryOnClick"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/chart"
-        app:srcCompat="@drawable/ic_playlist"
+        app:srcCompat="@drawable/ic_menu"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintHorizontal_bias="0.22" />
+
     <ListView
-        android:layout_width="0dp"
         android:id="@+id/list_view"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_general"
-        android:padding="@dimen/margin_general"
-        app:layout_constraintTop_toBottomOf="@+id/button2"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent">
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="0dp"
+        android:layout_marginTop="16dp"
+        android:background="@color/backgroundColorPrimary"
+        android:elevation="@dimen/elevation_general"
+        android:paddingLeft="@dimen/margin_general"
+        android:paddingRight="@dimen/elevation_general"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/bt_history"
+        android:layout_marginRight="0dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="0dp"
+        app:layout_constraintLeft_toLeftOf="parent">
 
 
     </ListView>
