--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -14,7 +14,7 @@
         android:id="@+id/etLoginUsername"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginRight="8dp"
+        android:layout_marginRight="0dp"
         android:ems="10"
         android:textAlignment="center"
         android:hint="@string/username"
@@ -45,14 +45,9 @@
         android:id="@+id/ripple1"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.504"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
+        app:layout_constraintHorizontal_bias="0.5"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/etLoginPassword">
 
         <Button
@@ -74,16 +69,12 @@
         android:padding="@dimen/margin_general"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
         android:text="@string/or"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ripple1"
-        app:layout_constraintHorizontal_bias="0.501"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginTop="8dp" />
+        app:layout_constraintHorizontal_bias="0.5"
+        android:layout_marginTop="@dimen/margin_general" />
 
 
     <ImageView
@@ -122,11 +113,10 @@
 
     <com.balysv.materialripple.MaterialRippleLayout
         android:id="@+id/ripple2"
+        app:mrl_rippleColor="@color/colorPrimary"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="11dp"
+        android:layout_marginTop="@dimen/margin_general"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvOr"
@@ -138,10 +128,6 @@
             style="@style/shadowText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginStart="8dp"
             android:background="@drawable/border"
             android:onClick="btGuestSessionOnClick"
             android:text="@string/guest_session"
