--- a/app/src/main/res/layout/fragment_singup.xml
+++ b/app/src/main/res/layout/fragment_singup.xml
@@ -12,7 +12,7 @@
         android:id="@+id/etRegUsername"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginRight="8dp"
+        android:layout_marginRight="0dp"
         android:ems="10"
         android:textAlignment="center"
         android:hint="@string/username"
@@ -25,22 +25,6 @@
         android:layout_marginEnd="8dp" />
 
     <EditText
-        android:id="@+id/etRegEmail"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="8dp"
-        android:ems="10"
-        android:textAlignment="center"
-        android:hint="@string/email"
-        android:inputType="textEmailAddress"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/etRegUsername" />
-
-    <EditText
         android:textAlignment="center"
         android:id="@+id/etRegPassword"
         android:layout_width="0dp"
@@ -48,31 +32,29 @@
         android:ems="10"
         android:hint="@string/password"
         android:inputType="textPassword"
-        android:layout_marginTop="6dp"
-        app:layout_constraintTop_toBottomOf="@+id/etRegEmail"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/etRegUsername"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginRight="8dp"
+        android:layout_marginRight="0dp"
         android:layout_marginEnd="8dp" />
 
     <com.balysv.materialripple.MaterialRippleLayout
         android:layout_width="0dp"
+        app:mrl_rippleColor="@color/colorPrimary"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="@dimen/margin_general"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etRegPassword"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp">
+        android:layout_marginLeft="0dp">
 
         <Button
             android:id="@+id/btLogin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/border"
-            android:onClick="btGuestSessionOnClick"
+            android:onClick="btSingUpOnClick"
             android:text="@string/singup"
             android:textColor="@color/textColorPrimary"
             />
@@ -98,27 +80,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="@+id/etRegPassword"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etRegEmail"
         app:srcCompat="@drawable/ic_password"
         android:layout_marginLeft="24dp"
-        android:layout_marginStart="24dp" />
-
-    <ImageView
-        android:id="@+id/imageView8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/ic_email"
-        app:layout_constraintTop_toTopOf="@+id/etRegEmail"
-        android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toBottomOf="@+id/etRegEmail"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="24dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintVertical_bias="0.333"
-        android:layout_marginStart="24dp" />
+        android:layout_marginStart="24dp"
+        app:layout_constraintTop_toTopOf="@+id/etRegPassword"
+        android:layout_marginTop="8dp" />
 
 
 </android.support.constraint.ConstraintLayout>
