--- a/app/src/main/res/layout/activity_score.xml
+++ b/app/src/main/res/layout/activity_score.xml
@@ -41,16 +41,15 @@
         android:onClick="btNextOnClick"
         android:layout_width="@dimen/icon_dimen"
         android:layout_height="@dimen/icon_dimen"
-        android:layout_marginBottom="0dp"
         android:layout_marginRight="@dimen/margin_general"
 
-        android:layout_marginTop="0dp"
         android:background="@color/transparent"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toTopOf="@+id/chart"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@+id/toolbarScore"
-        app:srcCompat="@drawable/ic_keyboard_arrow_right" />
+        app:srcCompat="@drawable/ic_keyboard_arrow_right"
+        android:layout_marginEnd="@dimen/margin_general" />
     <com.github.mikephil.charting.charts.LineChart
         android:id="@+id/chart"
         android:elevation="@dimen/elevation_general"
@@ -75,7 +74,8 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/textView2"
         app:layout_constraintRight_toRightOf="parent"
-        tools:text="704" />
+        tools:text="704"
+        android:layout_marginEnd="@dimen/margin_text_chart" />
 
         <TextView
             android:id="@+id/textView2"
@@ -117,6 +117,19 @@
         app:srcCompat="@drawable/ic_menu"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintHorizontal_bias="0.22" />
+
+    <ImageView
+        android:id="@+id/iv_no_conex"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintLeft_toLeftOf="@+id/tv_no_conex"
+        app:layout_constraintRight_toRightOf="@+id/tv_no_conex"
+        app:srcCompat="@drawable/ic_signal_wifi_off"
+        app:layout_constraintTop_toBottomOf="@+id/bt_history"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintVertical_bias="0.39" />
+
     <TextView
         android:visibility="gone"
         android:id="@+id/tv_no_conex"
@@ -126,32 +139,35 @@
         android:textAllCaps="true"
         android:textStyle="bold"
         android:textColor="@color/textColorPrimary"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/chart" />
+        app:layout_constraintTop_toBottomOf="@+id/list_view" />
 
-    <ImageView
-        android:visibility="gone"
-        android:id="@+id/iv_no_conex"
-        android:layout_width="wrap_content"
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/ic_signal_wifi_off"
-        app:layout_constraintRight_toRightOf="@+id/tv_no_conex"
-        app:layout_constraintLeft_toLeftOf="@+id/tv_no_conex"
-        app:layout_constraintBottom_toTopOf="@+id/tv_no_conex" />
+        android:layout_marginTop="@dimen/margin_general"
+        android:background="@color/backgroundColorPrimary"
+        android:paddingLeft="@dimen/margin_general"
+        android:paddingTop="8dp"
+        android:text="@string/best_score_day"
+        android:textAllCaps="true"
+        android:textStyle="bold"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/bt_history" />
 
     <ListView
         android:id="@+id/list_view"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="@dimen/margin_general"
         android:background="@color/backgroundColorPrimary"
         android:elevation="@dimen/elevation_general"
         android:paddingLeft="@dimen/margin_general"
         android:paddingRight="@dimen/elevation_general"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bt_history"
+        app:layout_constraintTop_toBottomOf="@+id/textView7"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent">
 
